@@ -1,5 +1,11 @@
 2011-08-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>
 
+	* ItkToolbox/ItkImFilter.cpp (v0.4.2):
+
+	- Add comments that can be used by script
+	add_itk_imfilter_template.sh to recognise where to insert new
+	code.
+
 	* update_README.sh (v0.1.1):
 
 	- Add copyright header and set svn properties.
